<resources>
    <string name="app_name">Locations</string>
    <string name="logout">Logout</string>
    <string name="inbox">Inbox</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="safearea">Safe</string>
    <string name="title">Title</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="zipcode">Zip Code</string>
    <string name="review">Review</string>
    <string name="building">Building Name</string>
    <string name="submit">Submit</string>
</resources>
