<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginSuccessful">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/buttonbackground"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/navhomebtn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/home" />

        <Button
            android:id="@+id/navsearchbtn"
            android:layout_width="98dp"
            android:layout_height="fill_parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/search" />

        <Button
            android:id="@+id/navfavbtn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/inbox" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="111dp"
            android:layout_height="fill_parent"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="logoutClicked"
            android:text="@string/logout" />


    </LinearLayout>

    <TextView
        android:id="@+id/countrytextView"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="Country"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Spinner
        android:id="@+id/countryspinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/countrytextView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/citytextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="City"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryspinner1" />

    <Spinner
        android:id="@+id/cityspinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/citytextView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/addresstextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="Address"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityspinner1" />

    <Spinner
        android:id="@+id/addressspinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/addresstextView"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>